# create-py-app

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
create-py-app/: create_files.py  file_contents.yml  main.py
create_py_app/: create_files.py  main.py
