[tool.poetry]
name = "create-py-app"
version = "0.1.0"
description = ""
authors = ['Hideaki Yoshida <hyoshida123>']
readme = "README.md"
packages = [{include = "create-py-app"}]

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^2.20.0"
PyYAML = "^6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
